--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -467,6 +467,8 @@ pre > code,
 .page-body
 {
   padding: 0 @standard_spacing;
+  margin-bottom: @standard_spacing;
+  clear: both
 }
 
 .banner
@@ -498,12 +500,12 @@ pre > code,
   background-repeat: no-repeat;
   width: 250px;
   height: 75px;
-}
 
-.banner-logo a
-{
-  display: block;
-  height: 100%;
+  a
+  {
+    display: block;
+    height: 100%;
+  }
 }
 
 .banner-content
@@ -512,16 +514,16 @@ pre > code,
   right: 0;
   bottom: 0;
   text-align: right;
+
+  h1
+  {
+    margin: 0;
+  }
 }
 
 .banner-content when not (@banner_background_color = transparent)
 {
   margin-right: @standard_spacing;
-}
-
-.banner-content h1
-{
-  margin: 0;
 }
 
 .banner-title
@@ -617,12 +619,6 @@ pre > code,
 .nav-item
 {
   font-weight: normal;
-}
-
-.page-body
-{
-  margin-bottom: @standard_spacing;
-  clear: both
 }
 
 .footer
