--- a/site/resources/styles/core/menus.less
+++ b/site/resources/styles/core/menus.less
@@ -151,8 +151,8 @@ button + .menu-items.buttons,
 .menu-items.objects li:before,
 .menu-items.location li:before
 {
-  content: '>';
-  padding: 0 @button_padding;
+  content: '> ';
+  padding: 0 0 0 @menu_item_padding;
 }
 
 .menu-items li:first-child:before
