--- a/site/resources/styles/themes/resume.css
+++ b/site/resources/styles/themes/resume.css
@@ -23,7 +23,6 @@ For more information about the earthli WebCore, visit:
 http://www.earthli.com/software/webcore
 
 ****************************************************************************/
-@import "resume_years.css";
 .align-left {
   float: left;
   margin: 0 15px 15px 0;
@@ -2592,11 +2591,8 @@ h2 {
   text-align: right;
   font-size: 80%;
 }
-.text-flow .timeline .timeline-box table tbody tr td {
-  display: block;
-}
 .text-flow .timeline .timeline-box table tbody tr td:nth-child(2) {
-  display: flex;
+  display: grid;
 }
 .text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:first-child:not(:empty) {
   text-align: right;
@@ -2604,11 +2600,9 @@ h2 {
   box-sizing: border-box;
 }
 .text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:last-child:not(:empty) {
+  display: block;
+  height: 100%;
   padding-left: 0.5em;
-  box-sizing: border-box;
-}
-.text-flow .timeline .timeline-box table tbody tr td:nth-child(2) span:nth-child(3) {
-  white-space: nowrap;
 }
 .text-flow .timeline .timeline-box table tbody tr td:nth-child(2).level-expert:after {
   /*TODO Fix these appends*/
@@ -2652,14 +2646,14 @@ h2 {
   z-index: -1;
 }
 .text-flow .timeline .years > div {
-  flex-basis: calc(( 5  /  37 ) * 100%);
+  flex-basis: calc(( 5  /  38 ) * 100%);
   padding-left: 5px;
   border-left: 1px solid #c7c7c7;
   box-sizing: border-box;
   opacity: 0.6;
 }
 .text-flow .timeline .years > div:last-child {
-  flex-basis: calc(( 2  /  37 ) * 100%);
+  flex-basis: calc(( 2  /  38 ) * 100%);
   border-right: 1px solid #c7c7c7;
 }
 .text-flow .timeline .years > div:after {
@@ -2835,6 +2829,10 @@ section table.list tr th:after {
   background-color: #ffa600;
 }
 .architect {
+  margin: 1px 0;
+  background-color: #bc5090;
+}
+.instructor {
   margin: 1px 0;
   background-color: #bc5090;
 }
